--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Trebuchet MS", sans-serif;
+
     background-color: #f0f0f0;
     margin: 0;
     padding: 0;
@@ -34,7 +35,7 @@ p {
     text-align: center;
 }
 
-#log {
+#keylogDiv {
     margin-top: 20px;
     border: 1px solid #ccc;
     padding: 10px;
